# v2/nodejs/controllers/EventsService.js
@@ -1,0 +1,67 @@
+'use strict';
+
+exports.findEvents = function(vestorly-auth) {
+
+  var examples = {};
+  
+  examples['application/json'] = {
+  "events" : [ {
+    "referrer" : "aeiou",
+    "newsletter" : "aeiou",
+    "originator_group_name" : "aeiou",
+    "advisor_email" : "aeiou",
+    "original_url" : "aeiou",
+    "originator_email" : "aeiou",
+    "_id" : "aeiou",
+    "subject_email" : "aeiou"
+  } ]
+};
+  
+
+  
+  if(Object.keys(examples).length > 0)
+    return examples[Object.keys(examples)[0]];
+  
+}
+exports.findEventByID = function(id, vestorly-auth) {
+
+  var examples = {};
+  
+  examples['application/json'] = {
+  "referrer" : "aeiou",
+  "newsletter" : "aeiou",
+  "originator_group_name" : "aeiou",
+  "advisor_email" : "aeiou",
+  "original_url" : "aeiou",
+  "originator_email" : "aeiou",
+  "_id" : "aeiou",
+  "subject_email" : "aeiou"
+};
+  
+
+  
+  if(Object.keys(examples).length > 0)
+    return examples[Object.keys(examples)[0]];
+  
+}
+exports.updateEventByID = function(id, vestorly-auth, Event) {
+
+  var examples = {};
+  
+  examples['application/json'] = {
+  "referrer" : "aeiou",
+  "newsletter" : "aeiou",
+  "originator_group_name" : "aeiou",
+  "advisor_email" : "aeiou",
+  "original_url" : "aeiou",
+  "originator_email" : "aeiou",
+  "_id" : "aeiou",
+  "subject_email" : "aeiou"
+};
+  
+
+  
+  if(Object.keys(examples).length > 0)
+    return examples[Object.keys(examples)[0]];
+  
+}
