# v2/swagger/swagger.json
@@ -122,7 +122,7 @@
     },
     "/articles/{id}" : {
       "get" : {
-        "tags" : [ "article" ],
+        "tags" : [ "articles" ],
         "description" : "Returns a single article",
         "operationId" : "findArticleByID",
         "parameters" : [ {
@@ -138,6 +138,92 @@
             "description" : "Article response",
             "schema" : {
               "$ref" : "#/definitions/Article"
+            }
+          }
+        }
+      }
+    },
+    "/events" : {
+      "get" : {
+        "tags" : [ "events" ],
+        "description" : "Returns all events",
+        "operationId" : "findEvents",
+        "parameters" : [ {
+          "name" : "vestorly-auth",
+          "in" : "query",
+          "description" : "Vestorly Auth Token",
+          "required" : true,
+          "type" : "string",
+          "format" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Event response",
+            "schema" : {
+              "$ref" : "#/definitions/Events"
+            }
+          }
+        }
+      }
+    },
+    "/events/{id}" : {
+      "get" : {
+        "tags" : [ "events" ],
+        "description" : "Returns a single event if the user has access",
+        "operationId" : "findEventByID",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "description" : "Mongo ID of event to fetch",
+          "required" : true,
+          "type" : "string",
+          "format" : "string"
+        }, {
+          "name" : "vestorly-auth",
+          "in" : "query",
+          "description" : "Vestorly Auth Token",
+          "required" : true,
+          "type" : "string",
+          "format" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Event response",
+            "schema" : {
+              "$ref" : "#/definitions/Event"
+            }
+          }
+        }
+      },
+      "put" : {
+        "tags" : [ "events" ],
+        "description" : "Updates a single event by mongo id",
+        "operationId" : "updateEventByID",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "description" : "Mongo ID of event to update",
+          "required" : true,
+          "type" : "string",
+          "format" : "string"
+        }, {
+          "name" : "vestorly-auth",
+          "in" : "query",
+          "description" : "Vestorly Auth Token",
+          "required" : true,
+          "type" : "string",
+          "format" : "string"
+        }, {
+          "name" : "Event",
+          "in" : "formData",
+          "description" : "Event",
+          "required" : true
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Event response",
+            "schema" : {
+              "$ref" : "#/definitions/Event"
             }
           }
         }
@@ -677,6 +763,71 @@
         "img_changed" : {
           "type" : "boolean",
           "default" : false
+        }
+      }
+    },
+    "EventInput" : {
+      "required" : [ "advisor_email", "newsletter", "original_url", "originator_group_name", "subject_email" ],
+      "properties" : {
+        "referrer" : {
+          "type" : "string"
+        },
+        "original_url" : {
+          "type" : "string"
+        },
+        "originator_email" : {
+          "type" : "string"
+        },
+        "subject_email" : {
+          "type" : "string"
+        },
+        "advisor_email" : {
+          "type" : "string"
+        },
+        "originator_group_name" : {
+          "type" : "string"
+        },
+        "newsletter" : {
+          "type" : "string"
+        }
+      }
+    },
+    "Event" : {
+      "required" : [ "_id", "advisor_email", "newsletter", "original_url", "originator_group_name", "subject_email" ],
+      "properties" : {
+        "_id" : {
+          "type" : "string"
+        },
+        "referrer" : {
+          "type" : "string"
+        },
+        "original_url" : {
+          "type" : "string"
+        },
+        "originator_email" : {
+          "type" : "string"
+        },
+        "subject_email" : {
+          "type" : "string"
+        },
+        "advisor_email" : {
+          "type" : "string"
+        },
+        "originator_group_name" : {
+          "type" : "string"
+        },
+        "newsletter" : {
+          "type" : "string"
+        }
+      }
+    },
+    "Events" : {
+      "properties" : {
+        "events" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/Event"
+          }
         }
       }
     }
